@@ -10,6 +10,7 @@ import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.util.StringUtil;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.ByteArrayOutputStream;
 import java.io.DataOutputStream;
@@ -20,14 +21,14 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class Mute extends Command {
-    private static final List<String> COMMON_MUTE_TIMES = Collections.unmodifiableList(Arrays.asList("12h", "15m", "1d", "1h", "1m", "30s"));
+    private static final List<String> COMMON_MUTE_TIMES = List.of("12h", "15m", "1d", "1h", "1m", "30s");
 
     public Mute() {
         super("mute");
     }
 
     @Override
-    public boolean execute(CommandSender sender, String command, String[] args) {
+    public boolean execute(CommandSender sender, @NotNull String command, String[] args) {
         if (sender.hasPermission("venturechat.mute")) {
             if (args.length < 2) {
                 sender.sendMessage(LocalizedMessage.COMMAND_INVALID_ARGUMENTS.toString().replace("{command}", "/mute").replace("{args}", "[channel] [player] {time} {reason}"));
@@ -135,7 +136,7 @@ public class Mute extends Command {
     }
 
     @Override
-    public List<String> tabComplete(CommandSender sender, String label, String[] args) {
+    public @NotNull List<String> tabComplete(@NotNull CommandSender sender, @NotNull String label, String[] args) {
         List<String> completions = new ArrayList<>();
         if (args.length == 1) {
             StringUtil.copyPartialMatches(args[0], ChatChannel.getChatChannels().stream().map(ChatChannel::getName).collect(Collectors.toList()), completions);
